GYM-97 added Pageable functionality